@@ -1,4 +1,4 @@
-; $Id: views.help.ini,v 1.17 2009-04-22 07:03:35 merlinofchaos Exp $
+; $Id: views.help.ini,v 1.17.2.1 2009-09-15 15:42:42 merlinofchaos Exp $
 [advanced help settings]
 line break = TRUE
 
@@ -197,3 +197,8 @@ parent = api
 [api-upgrading]
 title = "Upgrading your module Views 1 to Views 2"
 parent = api
+
+[api-example]
+title = Integrating the Node Example module
+parent = api
+weight = 100
